Adds endpoint for uploading files
Signed-off-by: Christopher Grote <cmgrote@users.noreply.github.com>